Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.5:
	Pidgin:
	* Fix a crash that may occur when trying to ignore a user who is
	  not in the current chat room. (#15139)

version 2.10.4 (05/06/2012):
	General:
	* Support building against Farstream in addition to Farsight.
	  (Olivier Crete) (#14936)

	IRC:
	* Disable periodic WHO timer.  IRC channel user lists will no
	  longer automatically display away status, but libpurple will be
	  much kinder to the network.
	* Print unknown numerics to channel windows if we can associate
	  them.  Thanks to Marien Zwart. (#15090)

	MSN:
	* Fix a possible crash when receiving messages with certain characters
	  or character encodings.  Thanks to Fabian Yamaguchi for reporting
	  this! (CVE-2012-2318)

	XMPP:
	* Fix a possible crash when receiving a series of specially crafted
	  file transfer requests.  Thanks to José Valentín Gutiérrez for
	  reporting this!  (CVE-2012-2214)

	Windows-Specific Changes:
	* Words added to spell check dictionaries are saved across restarts of
	  Pidgin (#11886)

version 2.10.3 (03/26/2012):
	MSN:
	* Fix buddies not going offline. (#14997)

version 2.10.2 (03/14/2012):
	General:
	* Fix compilation when using binutils 2.22 and new GDK pixbuf. (#14799)
	* Fix compilation of the MXit protocol plugin with GLib 2.31. (#14773)

	Pidgin:
	* Add support for the GNOME3 Network dialog. (#13882)
	* Fix rare crash. (#14392)
	* Add support for the GNOME3 Default Application dialog for configuring
	  the Browser.

	libpurple:
	* Support new connection states and signals for NetworkManager 0.9+.
	  (Dan Williams) (#13859)

	AIM and ICQ:
	* Fix a possible crash when receiving an unexpected message
	  from the server. (Thijs Alkemade) (#14983)
	* Allow signing on with usernames containing periods and
	  underscores. (#13500)
	* Allow adding buddies containing periods and underscores. (#13500)
	* Don't try to format ICQ usernames entered as email addresses.