@@ -1,6 +1,9 @@
 Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 
 version 2.10.5:
+	libpurple:
+	* Add support for GNOME3 proxy settings. (Mihai Serban) (#15054)
+
 	Pidgin:
 	* Fix a crash that may occur when trying to ignore a user who is
 	  not in the current chat room. (#15139)
